Multiple fixes, improvements
Fixes image sizing, improves page scraping, cleans up code, organizes files, adds regex.json config file for ease of use.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Comparador de preços">
     <meta name="author" content="Guilherme Freitas">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -34,5 +34,5 @@
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
