--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <div class="p-column" id="cissa-column">
             </div>
         </div>
+        <div class="column" id="">
+            <h1>PC Xpress</h1>
+            <div class="p-column" id="pcxpress-column">
+            </div>
+        </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script src="js/index.js"></script>
