Fixes loading symbols, small improvements to semantics

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     </header>
     <main>
         <div class="column">
-            <div class="p-title" id="kabum-title"><h1>Kabum</h1></div>
+            <div class="p-title" id="kabum-title"><div class="lds-dual-ring"></div><h1>Kabum</h1></div>
             <div class="p-column" id="kabum-column">
             </div>
         </div>
         <div class="column">
-            <div class="p-title" id="pichau-title"><h1>Pichau</h1></div>
+            <div class="p-title" id="pichau-title"><div class="lds-dual-ring"></div><h1>Pichau</h1></div>
             <div class="p-column" id="pichau-column">
             </div>
         </div>
         <div class="column" id="">
-            <div class="p-title" id="cissa-title"><h1>Cissa Magazine</h1></div>
+            <div class="p-title" id="cissa-title"><div class="lds-dual-ring"></div><h1>Cissa Magazine</h1></div>
             <div class="p-column" id="cissa-column">
             </div>
         </div>
         <div class="column" id="">
-            <div class="p-title" id="pcxpress-title"><h1>PC Xpress</h1></div>
+            <div class="p-title" id="pcxpress-title"><div class="lds-dual-ring"></div><h1>PC Xpress</h1></div>
             <div class="p-column" id="pcxpress-column">
             </div>
         </div>
